@startuml

title __DESPRES2's Class Diagram__\n

  namespace despres2 {
    class despres2.Calculadora {
    - CalculadoraStrategy strategy
        - moneda : String
        + Calculadora()
        + calcularPreuVolAmbMoneda()
        + setStrategy()
    }
  }
  

  namespace despres2 {
    interface despres2.CalculadoraStrategy {
        {abstract} + calcularPreuVol()
    }
  }
  

  namespace despres2 {
    class despres2.Client2 {
        {static} + main()
    }
  }
  

  namespace despres2 {
    class despres2.VolIllesStrategy {
        + calcularPreuVol()
    }
  }
  

  namespace despres2 {
    class despres2.VolInternacionalStrategy {
        + calcularPreuVol()
    }
  }
  

  namespace despres2 {
    class despres2.VolNacionalStrategy {
        + calcularPreuVol()
    }
  }
  

  despres2.Calculadora o-- despres2.CalculadoraStrategy : strategy
  despres2.VolIllesStrategy .up.|> despres2.CalculadoraStrategy
  despres2.VolInternacionalStrategy .up.|> despres2.CalculadoraStrategy
  despres2.VolNacionalStrategy .up.|> despres2.CalculadoraStrategy

despres2.Client2 --> despres2.Calculadora: uses
right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
